--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -8,7 +8,7 @@ body {
   min-height: 100vh;
 }
 
-/*#up {
+/* #up {
   position: absolute;
   height: 500px;
   width: 800px;
@@ -64,4 +64,4 @@ body {
   background-attachment: fixed;
   filter: blur(90px);
   opacity: 0.6;
-}
+} */
